--- a/frontend/register.ejs
+++ b/frontend/register.ejs
@@ -19,7 +19,7 @@
 </div>
   <div id="UserForm" style="display: none;">
     <h3>Register with Email</h3>
-    <form class = "form" action="/register_submit" method="post" size ="50%">
+    <form class = "form" action="/register_submit1" method="post" size ="50%">
         <label for="participation_preference">How do you want to participate?</label>
         <select name="participation_preference" id="participation_preference">
             <option value="online">Online</option>
