--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -13,8 +13,9 @@ input {
 	border: none;
 }
 body {
-  width: 128rem;
-}.landing-page {
+  width: 100%;
+}
+.landing-page {
   box-sizing: border-box;
   padding: 2rem 0rem 7.8rem 2.4rem;
   width: 100%;
@@ -81,13 +82,18 @@ body {
 .landing-page .navbar .sidebar {
   margin-bottom: 1.2rem;
   box-sizing: border-box;
-  padding: 1.8rem 38.3rem 1.8rem 63.1rem;
+  padding: 1.8rem 38.3rem 1.8rem 85rem;
   width: 128rem;
   display: flex;
   align-items: center;
   background-color: #4a1d95;
   border-radius: 3rem;
   flex-shrink: 0;
+}
+.landing-page .navbar .sidebar .register-button{
+  background-color: #4a1d95;
+  border: none;
+
 }
 .landing-page .navbar .sidebar .register-txt {
   margin-right: 4.4rem;
@@ -110,9 +116,9 @@ body {
   flex-shrink: 0;
 }
 .landing-page .hero-section {
-  margin: 0rem 15.2rem 12.9rem 12.9rem;
+  margin: 0rem 15.2rem 12.9rem 17rem;
   width: calc(100% - 28.1rem);
-  height: 56.5rem;
+  height: 70rem;
   position: relative;
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -125,8 +131,8 @@ body {
   width: 68.2rem;
   height: 32rem;
   position: absolute;
-  left: 17.1rem;
-  top: 11.8rem;
+  left: 25rem;
+  top: 16rem;
   font-size: 20rem;
   font-weight: 400;
   line-height: 1.6;
@@ -149,8 +155,8 @@ body {
   width: 46.8rem;
   height: 3.6rem;
   position: absolute;
-  left: 27.2rem;
-  top: 34.2rem;
+  left: 35rem;
+  top: 38rem;
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.5;
@@ -183,7 +189,7 @@ body {
   flex-shrink: 0;
 }
 .landing-page .pictures {
-  margin: 0rem 24.2rem 2.2rem 21.65rem;
+  margin: 0rem 24.2rem 2.2rem 40rem;
   width: calc(100% - 45.85rem);
   height: 21.9rem;
   display: flex;
@@ -281,6 +287,7 @@ body {
   margin: 0rem 19.3rem 0rem 17rem;
   width: calc(100% - 36.3rem);
   height: 16.7rem;
+  left: 7rem;
   position: relative;
   flex-shrink: 0;
 }
@@ -308,6 +315,7 @@ body {
   top: 5.9rem;
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
   font-size: 2.4rem;
   font-weight: 400;
