--- a/frontend/index.ejs
+++ b/frontend/index.ejs
@@ -41,7 +41,7 @@
       <button onclick="window.location.href='register.html'" class="register-button">
         <p class="register-txt">Register</p>
       </button>
-      <button onclick="window.location.href='login.html'" class="register-button">
+      <button onclick="window.location.href='login.html'" class="register-button" style="cursor: pointer;">
         <p class="log-in">Log in</p>
       </button>
     </div>
