--- a/frontend/register.ejs
+++ b/frontend/register.ejs
@@ -18,13 +18,10 @@
   <button class="option" onclick="redirectToSocial()">Representative</button>
 </div>
   <div id="UserForm" style="display: none;">
-    <h3>Register with Email</h3>
+    
     <form class = "form" action="/register_submit1" method="post" size ="50%">
-        <label for="participation_preference">How do you want to participate?</label>
-        <select name="participation_preference" id="participation_preference">
-            <option value="online">Online</option>
-            <option value="offline">Offline</option>
-        </select>
+        <label for="participation_preference"></label>
+        
             <p class="title">Humraaj</p>
             <p class="message">Signup now and get full access to our app. </p>
                 <div class="flex">
@@ -52,7 +49,7 @@
             </label> 
                 
             <label>
-                <input required="" placeholder="" type="password" name="password"="input">
+                <input required="" placeholder="" type="password" name="password" class="input">
                 <span>Password</span>
             </label>
             <label>
@@ -67,13 +64,8 @@
   </div>
 </div>
 <div id="RepresentativeForm" style="display: none;">
-    <h3>Register with Email</h3>
     <form class = "form" action="/register_submit2" method="post"  size ="50%">
-        <label for="participation_preference">How do you want to participate?</label>
-        <select name="participation_preference" id="participation_preference">
-            <option value="online">Online</option>
-            <option value="offline">Offline</option>
-        </select>
+      <label for="participation_preference"></label>
             <p class="title">Humraaj</p>
             <p class="message">Signup now and get full access to our app. </p>
                 <div class="flex">
