--- a/frontend/option-user.ejs
+++ b/frontend/option-user.ejs
@@ -69,7 +69,7 @@ option-user        src="https://www.chatbase.co/embed.min.js"
         <button>Complaint Status</button>
     </a>
     
-    </div> <div class="line2"> <a href="/create_polls"><button>View <br>Polls</button> <button>Chats</button> </div>
+    </div> <div class="line2"> <a href="/show_polls"><button>View <br>Polls</button> <button>Chats</button> </div>
     </div>
     </div>
     </center>
