--- a/frontend/complaint-status.ejs
+++ b/frontend/complaint-status.ejs
@@ -26,7 +26,7 @@
             padding: 2rem;
         }
 
-        .complaints {
+       /*.complaints {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 1rem;
@@ -36,8 +36,25 @@
             background-color: #f4f4f4;
             padding: 1rem;
             border-radius: 5px;
-        }
+            display:grid;
+            justify-content: space-between;
 
+        }
+*/
+.complaints{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* 3 columns each taking 1 fraction of available space */
+        grid-gap: 10px; /* Gap between grid items */
+    }
+
+    .complaint {
+        background-color: #ddd;
+        padding: 20px;
+        text-align: center;
+        height:135px;
+        
+        
+    }
         footer {
             background-color: #333;
             color: #fff;
@@ -52,11 +69,17 @@
             display: flex;
             justify-content: space-between;
             margin-top: 1rem;
+            
         }
 
         .status p {
-            margin: 0;
+            display: block;
+            display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        
         }
+
     </style>
 </head>
 <body>
@@ -70,15 +93,25 @@
                 <article class="complaint">
                     <h2>Complaint #<%= index + 1 %>  - <%= complaint.subject %> </h2>
                     <div class="status">
-                        <p>Status: <%= complaint.resolved ? 'Resolved' : 'In Progress' %></p>
-                        <% if (complaint.resolved) { %>
-                            <p>Resolved : <%= complaint.resolved %></p>
-                        <% } else { %>
-                            <p>Assigned By: <%= complaint.fullname %></p>
-                            <% } %>
-                            <p>subject: <%= complaint.subject %></p>
+                        
+                        <div class="one"><p>Status: </p>
+                        
+                        
+                        <p ><%= complaint.resolved ? 'Progressed' : 'In Progress' %></p>
                     </div>
-                </article>
+
+                            <% if (complaint.resolved) { %>
+                                <p>Resolved : </p>
+                                <span>
+                                    <p><%= complaint.resolved %></p>
+                                </span>
+                                
+                                <% } else { %>
+                                    <p>Assigned By: <%= complaint.fullname %></p>
+                                    <% } %>
+                                    <p>subject: <%= complaint.subject %></p>
+                                </div>
+                            </article>
             <% }); %>
             
         </center>
